[gd_scene load_steps=3 format=3 uid="uid://b37nw6w04yjpv"]

[ext_resource type="Script" path="res://Source/Scenes/battle.gd" id="1_xx00s"]
[ext_resource type="Texture2D" uid="uid://c4xkl0ca2ib22" path="res://Assets/target.png" id="2_334fx"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_xx00s")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EnemiesLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Enemies"

[node name="PartyLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.5
offset_top = -23.0
offset_right = 20.5
grow_horizontal = 2
grow_vertical = 0
text = "Party"

[node name="SkillsContainer" type="HBoxContainer" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.247396
anchor_top = 0.787
anchor_right = 0.752
anchor_bottom = 0.89
offset_top = 0.0239563
offset_right = -0.304016
offset_bottom = 0.279968
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TargetUI" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="CanvasLayer/TargetUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0646701
anchor_top = 0.936728
anchor_right = 0.0646701
anchor_bottom = 0.936728
offset_left = -38.5
offset_top = -20.0
offset_right = 38.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="AttackButton" type="Button" parent="CanvasLayer/TargetUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.945
anchor_top = 0.937
anchor_right = 0.945
anchor_bottom = 0.937
offset_left = -38.64
offset_top = -20.176
offset_right = 38.36
offset_bottom = 19.824
grow_horizontal = 2
grow_vertical = 2
text = "Attack"
metadata/_edit_use_anchors_ = true

[node name="Left" type="Button" parent="CanvasLayer/TargetUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0373264
anchor_top = 0.473765
anchor_right = 0.078125
anchor_bottom = 0.550926
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "<"
metadata/_edit_use_anchors_ = true

[node name="Right" type="Button" parent="CanvasLayer/TargetUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.93316
anchor_top = 0.473765
anchor_right = 0.973958
anchor_bottom = 0.550926
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = ">"
metadata/_edit_use_anchors_ = true

[node name="ResultScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ResultLabel" type="Label" parent="CanvasLayer/ResultScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 40
text = "Result"

[node name="EnemiesPos" type="Node2D" parent="."]

[node name="1" type="Marker2D" parent="EnemiesPos"]
position = Vector2(238, 124)

[node name="2" type="Marker2D" parent="EnemiesPos"]
position = Vector2(476, 124)

[node name="3" type="Marker2D" parent="EnemiesPos"]
position = Vector2(714, 124)

[node name="4" type="Marker2D" parent="EnemiesPos"]
position = Vector2(952, 124)

[node name="PartyPos" type="Node2D" parent="."]

[node name="1" type="Marker2D" parent="PartyPos"]
position = Vector2(238, 450)

[node name="2" type="Marker2D" parent="PartyPos"]
position = Vector2(476, 450)

[node name="3" type="Marker2D" parent="PartyPos"]
position = Vector2(714, 450)

[node name="4" type="Marker2D" parent="PartyPos"]
position = Vector2(952, 450)

[node name="Enemies" type="Node2D" parent="."]

[node name="Party" type="Node2D" parent="."]

[node name="TargetArrow" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_334fx")

[connection signal="pressed" from="CanvasLayer/TargetUI/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/TargetUI/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="CanvasLayer/TargetUI/Left" to="." method="_on_pointer_clicked" binds= [-1]]
[connection signal="pressed" from="CanvasLayer/TargetUI/Right" to="." method="_on_pointer_clicked" binds= [1]]
